force-app/main/default/objects/Investment_Fee__c/Investment_Fee__c.object-meta.xml
<CustomObject>
    <label>Investment Fee</label>
    <nameField>
        <displayFormat>IF-{00}</displayFormat>
        <label>Investment Fee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Fee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>