force-app/main/default/objects/Investment_Fee__c/fields/ChargesOnH__c.field-meta.xml
<CustomField>
    <fullName>ChargesOnH__c</fullName>
    <formula>IF ( INCLUDES (  FeeS__r.Crhb__c  , &quot;Investment&quot; ), &quot;Investment; &quot;,null ) &amp;
IF ( INCLUDES ( FeeS__r.Crhb__c , &quot;Profit&quot; ), &quot;Profit; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be populated via a Formula for the Hybrid Type</inlineHelpText>
    <label>Charges On H</label>
    <type>Text</type>
</CustomField>