force-app/main/default/objects/Investment_Fee__c/fields/Chr__c.field-meta.xml
<CustomField>
    <fullName>Chr__c</fullName>
    <formula>( FeeS__r.Chr__c )</formula>
    <inlineHelpText>Formula field that calculates the Charges %age paid on the investment</inlineHelpText>
    <label>Charges %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>