force-app/main/default/objects/Investment_Fee__c/fields/ChrOn__c.field-meta.xml
<CustomField>
    <fullName>ChrOn__c</fullName>
    <formula>TEXT(FeeS__r.Chron__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be populated via a Formula that shows the Charges on the investment</inlineHelpText>
    <label>Charges on</label>
    <type>Text</type>
</CustomField>