force-app/main/default/objects/Investment_Fee__c/fields/FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>FeeAmount__c</fullName>
    <inlineHelpText>Total Fee Amount against the Investment .</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>