force-app/main/default/objects/Investment_Fee__c/fields/FeeS__c.field-meta.xml
<CustomField>
    <fullName>FeeS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a Lookup field to the Fee Schedule related to this account. Select via Lookup or create one if needed.</inlineHelpText>
    <label>FeeS</label>
    <referenceTo>FeeSchedules__c</referenceTo>
    <relationshipLabel>Investment Fee</relationshipLabel>
    <relationshipName>Investment_Fee</relationshipName>
    <type>Lookup</type>
</CustomField>