force-app/main/default/objects/Investment_Fee__c/fields/Hyb__c.field-meta.xml
<CustomField>
    <fullName>Hyb__c</fullName>
    <description>Using this field for Tech purpose.</description>
    <formula>IF(ISPICKVAL(FeeS__r.Fe__r.Ty__c,&apos;H&apos;),
	IF(ISPICKVAL( FeeS__r.FTy__c,&apos;ManagementFee&apos;),
		IF(ISPICKVAL( FeeS__r.Dur__c ,&apos;Monthly&apos;),(ICA__c +PVC__c),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;Quarterly&apos;),(ICA__c +PVC__c *(VALUE(FeeS__r.Fe__r.Tnr__c)/3)),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;SemiAnually&apos;),(ICA__c +PVC__c*(VALUE(FeeS__r.Fe__r.Tnr__c)/6)),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;Yearly&apos;),(ICA__c +PVC__c*(VALUE(FeeS__r.Fe__r.Tnr__c)/12)),0)))),
	IF(ISPICKVAL(FeeS__r.FTy__c,&apos;ProfitShare&apos;),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;Monthly&apos;),(PAC__c+PVC__c),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;Quarterly&apos;),(PAC__c+(PVC__c)*(VALUE(FeeS__r.Fe__r.Tnr__c)/3)),
		IF(ISPICKVAL(FeeS__r.Dur__c ,&apos;SemiAnually&apos;),(PAC__c+(PVC__c)*(VALUE(FeeS__r.Fe__r.Tnr__c)/6)),
		IF(ISPICKVAL( FeeS__r.Dur__c,&apos;Yearly&apos;),(PAC__c+(PVC__c)*(VALUE(FeeS__r.Fe__r.Tnr__c)/12)),0 )))),
	IF(ISPICKVAL(FeeS__r.FTy__c,&apos;FixedAmount&apos;),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;Monthly&apos;),(FeeS__r.Ffee__c*(VALUE(FeeS__r.Fe__r.Tnr__c))+PVC__c),
		IF(ISPICKVAL(FeeS__r.Dur__c,&apos;Quarterly&apos;),(FeeS__r.Ffee__c+PVC__c*(VALUE(FeeS__r.Fe__r.Tnr__c)/3)),
		IF(ISPICKVAL(FeeS__r.Dur__c ,&apos;SemiAnually&apos;),(FeeS__r.Ffee__c+PVC__c*(VALUE(FeeS__r.Fe__r.Tnr__c)/6)),
		IF(ISPICKVAL( FeeS__r.Dur__c,&apos;Yearly&apos;),(FeeS__r.Ffee__c+PVC__c*(VALUE(FeeS__r.Fe__r.Tnr__c)/12)),0 )))),0))),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a Formula field that will show the Fee for the Hybrid Type</inlineHelpText>
    <label>Fee (Hyb)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>