force-app/main/default/objects/Investment_Fee__c/fields/IR__c.field-meta.xml
<CustomField>
    <fullName>IR__c</fullName>
    <inlineHelpText>Investment Record against which the Fee is calculated</inlineHelpText>
    <label>Investment Record</label>
    <referenceTo>InvestmentRecord__c</referenceTo>
    <relationshipLabel>Investment Fee</relationshipLabel>
    <relationshipName>Investment_Fee1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>