force-app/main/default/objects/Investment_Fee__c/fields/PAC__c.field-meta.xml
<CustomField>
    <fullName>PAC__c</fullName>
    <description>This field gets computed (Profit Amount *Charges%).</description>
    <formula>ROI_Profit_Amount__c  *   FeeS__r.Chr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field gets computed (Profit Amount *Charges%).This is a Formula field that shows the Profit charges paid on this investment</inlineHelpText>
    <label>Profit Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>