force-app/main/default/objects/Investment_Fee__c/fields/PV__c.field-meta.xml
<CustomField>
    <fullName>PV__c</fullName>
    <formula>IR__r.IA__c  +   ROI_Profit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Present investmnet value (Investmnet Amount + Profit) in dollar amount</inlineHelpText>
    <label>Present value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>