force-app/main/default/objects/Investment_Fee__c/fields/PVC__c.field-meta.xml
<CustomField>
    <fullName>PVC__c</fullName>
    <formula>IF(PV__c&gt;TAmt__c,((PV__c-TAmt__c)*(FeeS__r.TPShare__c )),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Present value is greater than Threshold amount((Present Value - Threshold Amount)*Threshold Profit Share)</inlineHelpText>
    <label>Present Value Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>