force-app/main/default/objects/Investment_Fee__c/fields/PVThAmt__c.field-meta.xml
<CustomField>
    <fullName>PVThAmt__c</fullName>
    <formula>PV__c &gt;  TAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Present Value v/s Threshold Amount</inlineHelpText>
    <label>PV V/S ThAmt</label>
    <type>Checkbox</type>
</CustomField>