force-app/main/default/objects/Investment_Fee__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a Lookup field to the ROI related to this account. Select via Lookup or create one if needed.</inlineHelpText>
    <label>ROI</label>
    <referenceTo>ROI__c</referenceTo>
    <relationshipLabel>Investment Fee</relationshipLabel>
    <relationshipName>Investment_Fee</relationshipName>
    <type>Lookup</type>
</CustomField>