force-app/main/default/objects/Investment_Fee__c/fields/ROI_Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ROI_Profit_Amount__c</fullName>
    <formula>IR__r.ROI_Profit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>