force-app/main/default/objects/Investment_Fee__c/fields/ROIPercent__c.field-meta.xml
<CustomField>
    <fullName>ROIPercent__c</fullName>
    <formula>IR__r.ROI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>