force-app/main/default/objects/Investment_Fee__c/fields/TAmt__c.field-meta.xml
<CustomField>
    <fullName>TAmt__c</fullName>
    <formula>( IR__r.IA__c * FeeS__r.TMul__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The maximum threshold amount against the investment</inlineHelpText>
    <label>Threshold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>